// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Babel Package transformer should work with child packages 1`] = `
Object {
  "babel": Object {
    "plugins": Array [
      "@babel/plugin-proposal-object-rest-spread",
    ],
    "presets": Array [
      Array [
        "@babel/env",
        Object {
          "targets": Object {
            "node": "8.12.0",
          },
        },
      ],
    ],
  },
  "devDependencies": Object {
    "@babel/cli": "^7.8.3",
    "@babel/core": "^7.8.3",
    "@babel/plugin-proposal-object-rest-spread": "^7.8.3",
    "@babel/preset-env": "^7.8.3",
    "@babel/register": "^7.8.3",
  },
  "metapak": Object {
    "data": Object {
      "bundleFiles": Array [
        "dist",
        "src",
      ],
      "childPackage": true,
      "files": "src/*.js src/**/*.js",
    },
  },
  "scripts": Object {
    "compile": "babel src --out-dir=dist --source-maps=true",
    "precz": "npm run compile",
    "preversion": "npm run compile",
  },
}
`;

exports[`Babel Package transformer should work with eslint config 1`] = `
Object {
  "babel": Object {
    "plugins": Array [
      "@babel/plugin-proposal-object-rest-spread",
    ],
    "presets": Array [
      Array [
        "@babel/env",
        Object {
          "targets": Object {
            "node": "8.12.0",
          },
        },
      ],
    ],
  },
  "devDependencies": Object {
    "@babel/cli": "^7.8.3",
    "@babel/core": "^7.8.3",
    "@babel/plugin-proposal-object-rest-spread": "^7.8.3",
    "@babel/preset-env": "^7.8.3",
    "@babel/register": "^7.8.3",
    "babel-eslint": "^10.0.3",
  },
  "eslintConfig": Object {
    "env": Object {
      "es6": true,
      "jest": true,
      "mocha": true,
      "node": true,
    },
    "extends": "eslint:recommended",
    "parserOptions": Object {
      "ecmaVersion": 2018,
      "modules": true,
      "sourceType": "module",
    },
    "plugins": Array [
      "prettier",
    ],
    "rules": Object {
      "prettier/prettier": "error",
    },
  },
  "greenkeeper": Object {
    "ignore": Array [
      "@babel/cli",
      "@babel/core",
      "@babel/register",
      "@babel/preset-env",
      "@babel/plugin-proposal-object-rest-spread",
      "babel-eslint",
    ],
  },
  "metapak": Object {
    "configs": Array [
      "eslint",
      "babel",
    ],
    "data": Object {
      "bundleFiles": Array [
        "dist",
        "src",
      ],
      "testsFiles": "src/*.js src/**/*.js",
    },
  },
  "prettier": Object {
    "printWidth": 80,
    "proseWrap": "always",
    "semi": true,
    "singleQuote": true,
    "trailingComma": "all",
  },
  "scripts": Object {
    "compile": "babel src --out-dir=dist --source-maps=true",
    "precz": "npm run compile",
    "preversion": "npm run compile",
    "test": "",
  },
}
`;

exports[`Babel Package transformer should work with jest config 1`] = `
Object {
  "babel": Object {
    "plugins": Array [
      "@babel/plugin-proposal-object-rest-spread",
    ],
    "presets": Array [
      Array [
        "@babel/env",
        Object {
          "targets": Object {
            "node": "8.12.0",
          },
        },
      ],
    ],
  },
  "devDependencies": Object {
    "@babel/cli": "^7.8.3",
    "@babel/core": "^7.8.3",
    "@babel/plugin-proposal-object-rest-spread": "^7.8.3",
    "@babel/preset-env": "^7.8.3",
    "@babel/register": "^7.8.3",
  },
  "greenkeeper": Object {
    "ignore": Array [
      "@babel/cli",
      "@babel/core",
      "@babel/register",
      "@babel/preset-env",
      "@babel/plugin-proposal-object-rest-spread",
      "babel-core",
    ],
  },
  "metapak": Object {
    "configs": Array [
      "babel",
      "jest",
    ],
    "data": Object {
      "bundleFiles": Array [
        "dist",
        "src",
      ],
      "testsFiles": "src/*.js src/**/*.js",
    },
  },
  "scripts": Object {
    "compile": "babel src --out-dir=dist --source-maps=true",
    "precz": "npm run compile",
    "preversion": "npm run compile",
    "test": "",
  },
}
`;

exports[`Babel Package transformer should work with mocha config 1`] = `
Object {
  "babel": Object {
    "plugins": Array [
      "@babel/plugin-proposal-object-rest-spread",
    ],
    "presets": Array [
      Array [
        "@babel/env",
        Object {
          "targets": Object {
            "node": "8.12.0",
          },
        },
      ],
    ],
  },
  "devDependencies": Object {
    "@babel/cli": "^7.8.3",
    "@babel/core": "^7.8.3",
    "@babel/plugin-proposal-object-rest-spread": "^7.8.3",
    "@babel/preset-env": "^7.8.3",
    "@babel/register": "^7.8.3",
  },
  "greenkeeper": Object {
    "ignore": Array [
      "@babel/cli",
      "@babel/core",
      "@babel/register",
      "@babel/preset-env",
      "@babel/plugin-proposal-object-rest-spread",
    ],
  },
  "metapak": Object {
    "configs": Array [
      "babel",
      "mocha",
    ],
    "data": Object {
      "bundleFiles": Array [
        "dist",
        "src",
      ],
      "testsFiles": "src/*.js src/**/*.js",
    },
  },
  "scripts": Object {
    "compile": "babel src --out-dir=dist --source-maps=true",
    "precz": "npm run compile",
    "preversion": "npm run compile",
    "test": "",
  },
}
`;

exports[`Babel Package transformer should work with some files 1`] = `
Object {
  "babel": Object {
    "plugins": Array [
      "@babel/plugin-proposal-object-rest-spread",
    ],
    "presets": Array [
      Array [
        "@babel/env",
        Object {
          "targets": Object {
            "node": "8.12.0",
          },
        },
      ],
    ],
  },
  "devDependencies": Object {
    "@babel/cli": "^7.8.3",
    "@babel/core": "^7.8.3",
    "@babel/plugin-proposal-object-rest-spread": "^7.8.3",
    "@babel/preset-env": "^7.8.3",
    "@babel/register": "^7.8.3",
  },
  "greenkeeper": Object {
    "ignore": Array [
      "@babel/cli",
      "@babel/core",
      "@babel/register",
      "@babel/preset-env",
      "@babel/plugin-proposal-object-rest-spread",
    ],
  },
  "metapak": Object {
    "configs": Array [
      "babel",
    ],
    "data": Object {
      "bundleFiles": Array [
        "src/**/*.js",
        "LICENSE",
        "README.md",
        "CHANGELOG.md",
        "dist/**/*.js",
        "dist",
        "src",
      ],
      "testsFiles": "src/*.js src/**/*.js",
    },
  },
  "scripts": Object {
    "compile": "babel src --out-dir=dist --source-maps=true",
    "precz": "npm run compile",
    "preversion": "npm run compile",
    "test": "",
  },
}
`;
